Add GET /resource handlers
* GET /resource
* GET /resource/config
* GET /resource/monitor
* GET /resource/status
